<resources>
    <string name="app_name">WhatsAppClone</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_code">Enter Code</string>
    <string name="send_verification">Send Verification Code</string>
    <string name="title_activity_main_page">MainPageActivity</string>
    <string name="logout">Logout</string>
    <string name="verify_code">Verify Code</string>
    <string name="find_users">Find Users</string>
    <string name="cancel">Cancel</string>
    <string name="code_empty">Grrrr, why is your code empty. Authentication was not successful!</string>
    <string name="firebase_error">Error, something failed with Firebase authentication.</string>
    <string name="wrong_code">Error, code is not right. Authentication was not successful!</string>
</resources>
